[package]
edition = "2021"
name = "creative-monitoring-server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.24"
parking_lot = "0.12.1"
serde = {version = "1.0.147", features = ["derive"]}
serde_json = "1.0.87"
tokio = {version = "1.21.1", features = ["full"]}
tokio-stream = "0.1.9"
warp = "0.3.2"
